Avances hasta cardinalidad de conjuntos finitos

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{amsmath}
+\usepackage{mathbbol}
 \usepackage{fullpage}
 \usepackage[table, x11names]{xcolor}
 \usepackage[bookmarks]{hyperref}
