Avances hasta el inicio de conjuntos numerables

--- a/sections/conjunto.tex
+++ b/sections/conjunto.tex
@@ -814,5 +814,12 @@ Este conjunto es infinito. Si lo pensamos, $\mathds{N}$ (el conjunto de los natu
         \draw[-stealth] (Nat5) -- (P5);
     \end{tikzpicture}
 \]
+Con la biyección $f: \mathds{N} \rightarrow \mathbb{P}$, donde $f(n) = 2n$, se tiene que $|\mathds{N}| = |\mathbb{P}|$
+
+\subsection{Conjuntos numerables}
+
+
+
+
 
 \end{document}
