--- a/sections/conjunto.tex
+++ b/sections/conjunto.tex
@@ -656,7 +656,7 @@ Por otro lado, estas cosas no serían funciones
         \draw[-stealth, blue] (a3) -- (b1);
     \end{tikzpicture}
 \]
-\color{red}$f_2: A \rightarrow B$: Esto no es función, debido a que un elemento de $A$ se relaciona con más de un elemento de $B$ (Tambien no relaciona todos los elementos de $A$)\\
+\color{red}$f_2: A \rightarrow B$: Esto no es función, debido a que un elemento de $A$ se relaciona con más de un elemento de $B$ (También no relaciona todos los elementos de $A$)\\
 \color{blue}$f_3: A \rightarrow B$: Esto no es función, debido a que no todos los elementos de $A$ se relacionan con algún elemento de $B$.\color{black}\\
 Una función siempre se puede ver como tabla, cosa que en la mayoría de casos hace que sea más facil visualizarla y entenderla que los diagramas de antes. Por ejemplo, para la $f_1$ definida antes
 \[
@@ -817,7 +817,18 @@ Este conjunto es infinito. Si lo pensamos, $\mathds{N}$ (el conjunto de los natu
 Con la biyección $f: \mathds{N} \rightarrow \mathbb{P}$, donde $f(n) = 2n$, se tiene que $|\mathds{N}| = |\mathbb{P}|$
 
 \subsection{Conjuntos numerables}
+Se dice que un subconjunto $A$ es numerable si tiene la misma cardinalidad que un subconjunto de $\mathds{N}$. Más formalmente, un conjunto $A$ es numerable si
+\[ \exists S \subseteq \mathds{N} . |A| = |S| \]
+También se puede decir que un conjunto $A$ es numerable si y solo si existe una secuencia ordenada del tipo $a_1, a_2, a_3, \ldots$, en donde $\forall i \not= j . a_i \not= a_j$ y $\forall a \in A . \exists i \in \mathds{N} . a = a_i$. En otras palabras, todos los elementos de la secuencia ordenada deben de ser diferentes entre si y todo elemento de la secuencia debe existir en $A$ (y estar ``indexado'' con numeros naturales).\\
+Destacar que \textbf{NO TODOS} los conjuntos son numerables. Por ejemplo, el conjunto $\mathds{R}$ no es numerable.
 
+\subsection{Paradoja del Gran Hotel de Hilbert - Paradoja del Hotel Infinito}
+\begin{wrapfigure}{r}{0.35\textwidth}
+    \centering
+    \includegraphics[scale=0.16]{GranHotelHillbert.jpeg}
+\end{wrapfigure}
+Esta paradoja fue enunciada por \textit{David Hilbert (1862-1943)}, la cual habla de un hotel ficticio con una cantidad infinita de habitaciones, el cual se encuentra lleno. Llega un nuevo huésped al hotel y es su tarea entregarle una habitación. ¿Cómo puede asignarle una habitación? ¡Desplazando a cada uno de los huéspedes actuales a la habitación siguiente! El huésped de la habitación 1 se deberá ir a la habitación 2 y así.\\
+Si está interesado en comprender mejor esta paradoja, aconsejo mirar el \href{https://www.youtube.com/watch?v=OxGsU8oIWjY}{video de Veritasium}\footnote{El link del video es: https://www.youtube.com/watch?v=OxGsU8oIWjY} en donde se habla de algunas de las implicancias que tiene esta paradoja. Este video se encuentra en inglés, pero una \href{https://www.youtube.com/watch?v=4c8vG-mxuao}{versión en español}\footnote{El link del video es: https://www.youtube.com/watch?v=4c8vG-mxuao} se encuentra disponible también.
 
 
 
