Avances hasta problemas de decision

--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 \usepackage[stable]{footmisc}
 \usepackage{tikz}
 \usepackage{slashed}
+\usepackage{minted}
 
 \newcommand{\switchdarkmode}[2]{{#2}}
 \switchdarkmode{
