--- a/sections/anexo.tex
+++ b/sections/anexo.tex
@@ -56,7 +56,7 @@ Así, queda demostrado que el mínimo debe ser único.
 
 \subsection{Demostración - Si es mínimo, es minimal}
 \label{sec:dem_min_minimal}
-\textbf{Si $x$ es mínimo, entonces x es minimal}\\
+\textbf{Si $x$ es mínimo, entonces $x$ es minimal}\\
 Sea $x^{\downarrow}$ un mínimo\\
 Para realizar la demostración, se debe demostrar que $\forall z \in S . z \preceq x^{\downarrow} \rightarrow z = x$\\
 Suponga que $z \preceq x^{\downarrow}$. Por definición de mínimo, se tiene que $x^{\downarrow} \preceq z$. Entonces, considerando toda la información, se llega a que
@@ -69,5 +69,49 @@ Suponga que $z \preceq x^{\downarrow}$. Por definición de mínimo, se tiene que
     \right \}
     z = x^{\downarrow}
 \]
+
+\subsection{Demostración - Teorema de Cantor}
+Por demostrar: No existe biyección entre $A$ y $2^A = \{ S | S \subseteq A \}$\\
+Para ayudar a que sea más sencillo entender la demostración, se puede demostrar primero que no existe biyección entre $\mathds{N}$ y $2^{\mathds{N}}$, para después extrapolarlo a cualquier conjunto $A$.\\
+Por demostrar: No existe biyección entre $\mathds{N}$ y $2^{\mathds{N}} = \{ S | S \subseteq \mathds{N} \}$\\
+Para comenzar la demostración, se supone que si existe una biyección $f: \mathds{N} \rightarrow 2^{\mathds{N}}$
+\[
+    \begin{tabular}{c|cccccc}
+        \text{} & $0$ & $1$ & $2$ & $3$ & $4$ & $\ldots$\\\hline
+        $f(0)$ & $1$ & $1$ & $0$ & $1$ & $0$ & $\ldots$\\
+        $f(1)$ & $0$ & $0$ & $1$ & $1$ & $1$ & $\ldots$\\
+        $f(2)$ & $1$ & $1$ & $1$ & $1$ & $0$ & $\ldots$\\
+        $f(3)$ & $1$ & $0$ & $1$ & $0$ & $0$ & $\ldots$\\
+        $f(4)$ & $0$ & $0$ & $1$ & $1$ & $0$ & $\ldots$\\
+        $\dots$ & & & $\ldots$ & & &
+    \end{tabular}
+\]
+Aquí, la coordenada $(i,j)$ es $1$ si y solo si $j \in f(i)$.
+Si consideramos todos los elementos de la diagonal y los colocamos en un conjunto $D$\dots
+\[
+    \begin{tabular}{c|cccccc}
+        \text{} & $0$ & $1$ & $2$ & $3$ & $4$ & $\ldots$\\\hline
+        $f(0)$ & \cellcolor{lightgray}$1$ & $1$ & $0$ & $1$ & $0$ & $\ldots$\\
+        $f(1)$ & $0$ & \cellcolor{lightgray}$0$ & $1$ & $1$ & $1$ & $\ldots$\\
+        $f(2)$ & $1$ & $1$ & \cellcolor{lightgray}$1$ & $1$ & $0$ & $\ldots$\\
+        $f(3)$ & $1$ & $0$ & $1$ & \cellcolor{lightgray}$0$ & $0$ & $\ldots$\\
+        $f(4)$ & $0$ & $0$ & $1$ & $1$ & \cellcolor{lightgray}$0$ & $\ldots$\\
+        $\dots$ & & & $\ldots$ & & &
+    \end{tabular}
+\]
+\[ D = \{ i \in \mathds{N} | i \in f(i) \} \in 2^{\mathds{N}} = \{ 0, 2, \ldots \} \]
+Si pensamos en el complemento de $D$, llamese, el conjunto de elementos que no se encuentran contenidos en el conjunto $D$, obtenemos
+\[ \bar{D} = \{ i \in \mathds{N} | i \not\in f(i) \} \in 2^{\mathds{N}} = \{ 1, 3, 4, \ldots \} \]
+Por la naturaleza de $\bar{D}$, no hay ninguna $f(x)$ para todo $x$, debido a que para que $x \in f(x)$, se debe cumplir que $x \not\in \bar{D}$. Con esto se llega a que no existe una biyección entre $\mathds{N}$ y $2^{\mathds{N}}$.\\
+Este mismo argumento se puede extrapolar a cualquier conjunto $A$, ya que el motivo por el que ocurre esto no esta relacionado con el conjunto en si, si no por la forma en la que funciona el conjunto potencia.\\
+Si se mantiene escéptico, considere
+\[ \bar{D} = \{ a \in A | a \not\in f(a) \} \]
+Ahora considere un $x^* \in A$, tal que $f(x^*) = \bar{D}$
+\begin{itemize}
+    \item $x^* \in f(x^*) \Rightarrow x^* \in \bar{D} \Rightarrow x^* \not\in f(x^*)$
+    \item $x^* \not\in f(x^*) \Rightarrow x^* \in \bar{D} \Rightarrow x^* \in f(x^*)$
+\end{itemize}
+Llegamos a una contradicción, lo que significa que dicho $x^*$ no puede existir, llegando a que no existe una biyección.
+
 
 \end{document}
