Modo oscuro de resumen + avances en notacion asintotica

--- a/main.tex
+++ b/main.tex
@@ -13,12 +13,8 @@
 \usepackage{slashed}
 \usepackage{minted}
 
-\newcommand{\switchdarkmode}[2]{{#2}}
-\switchdarkmode{
-    \pagecolor{black} %black
-    \color{white} %grey
-}{}
-
+\color{white}
+\pagecolor{black} %black
 
 \usetikzlibrary{positioning}
 
@@ -37,8 +33,11 @@
 %Macrosección de Lógica de Predicados
 \subfile{sections/logica_predicado.tex}
 
-%Macroseccion de Teoría de Conjuntos y Relaciones
+%Macrosección de Teoría de Conjuntos y Relaciones
 \subfile{sections/conjunto.tex}
+
+%Macrosección de Teoría de Números
+\subfile{sections/numero.tex}
 
 %------Anexo---------------------
 \newpage
