--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
 \documentclass{article}
+\usepackage[spanish]{babel}
 \usepackage{amsmath}
 \usepackage{mathbbol}
 \usepackage{fullpage}
@@ -17,6 +18,7 @@
 \pagecolor{black} %black
 
 \usetikzlibrary{positioning}
+\usetikzlibrary{decorations.pathreplacing,calligraphy,backgrounds}
 
 \graphicspath{{img/}{../img/}}
 
